<resources>
    <string name="app_name">Learning Apps</string>
    //Kotlin
    <string name="pengertiankt">Kotlin adalah bahasa pemrogramman modern namun sudah matang yang bertujuan untuk membuat pengembang lebih bahagia. Ringkas, aman, dapat dioperasikan dengan Java dan bahasa lain, dan menyediakan banyak cara untuk menggunakan kembali kode di antara berbagai platform untuk pemrograman yang produktif.</string>
    <string name="sejarhkt">Kotlin pertama kali rilis pada Juli 2011. Kotlin dikembangkan selama 1 tahun oleh Dmitry Jemerov, penulis buku “Kotlin in action” bersama dengan Svetlana Isakova. Nama kotlin sendiri berasal dari pulau Kotlin di dekat St. Petersburg. Kotlin menjadi bahasa pemrograman ke 3 yang didukung android selain Java dan C++. Sejak rilis pada September 2018 yaitu versi 1.3 kotlin memiliki 2 ekstensi file yaitu .kt dan .kts.</string>
    <string name="filosofikt">Filosofi dikembangkan nya bahasa pemrograman Kotlin oleh JetBrains karena masing masing bahasa pemrograman memiliki keunggulan feature yang tidak dimiliki di bahasa pemrograman lainnya. Pada saat itu belum ada sebuah bahasa pemrograman yang memiliki paket lengkap fitur fitur unggulan yang terdapat pada masing masing bahasa pemrograman yang ada.</string>
    <string name="jbkata">Development lead Andrey Breslav has said that Kotlin is designed to be an industrial-strength object-oriented language, and a “better language” than Java, but still be fully interoperable with Java code, allowing companies to make a gradual migration from Java to Kotlin</string>
    <string name="fkt1">Kotlin di desain untuk menjadi bahasa modern yang lebih unggul dari Java serta memiliki fitur fitur yang ada pada bahasa pemrograman lain namun tidak ada di dalam bahasa pemrograman Java.</string>
    <string name="fkt2">Kotlin adalah bahasa pemrograman yang aman dari NPE (NullPointerException) atau yang sering disebut “The billion dollar mistake”. Kotlin akan melakukan pengecekan NPE pada saat kompilasi berjalan. Kotlin juga memiliki null-safe operator dimana operator ini dapat membedakan data types mana yang memiliki kemungkinan nilainya nullable atau non-nullable. Developer diharuskan memberikan “special care” pada setiap operation yang dilakukan pada data types yang memiliki nilai nullable tersebut, sehingga hal ini membuat code yang di buat oleh developer aman dari NPE.</string>
</resources>