<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KotlinActivity"
    android:orientation="vertical"
    android:background="@color/DarkBlue">

    <FrameLayout
        android:id="@+id/frameHeader"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_gravity="end"
            android:elevation="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/kotlin1"
            app:riv_corner_radius_bottom_right="40dp"
            app:riv_corner_radius_top_left="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_gravity="bottom"
            android:background="@drawable/background"
            android:gravity="bottom"
            android:orientation="vertical"
            android:elevation="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="18dp"
                android:text="Kotlin Programming"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/montserratbold"
                        android:text="Pengenalan Kotlin"
                        android:textAlignment="center"
                        android:textColor="@color/DarkBlue"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/pknbtn"
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="80dp"
                        android:background="@drawable/arrow"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"/>
                </LinearLayout>

            <LinearLayout
                android:id="@+id/expandblelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:justificationMode="inter_word"
                    android:padding="5dp"
                    android:text="@string/pengertiankt"
                    android:textColor="@color/DarkBlue" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectanglebtn"
                    android:fontFamily="@font/montserratsemibold"
                    android:text="Vidio"
                    android:textSize="15sp"
                    android:layout_marginLeft="250dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:onClick="moveyt"/>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/montserratbold"
                    android:text="Sejarah Kotlin"
                    android:textColor="@color/DarkBlue"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/pknbtn1"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="80dp"
                    android:background="@drawable/arrow"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/expandblelayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:justificationMode="inter_word"
                    android:padding="5dp"
                    android:text="@string/sejarhkt"
                    android:textColor="@color/DarkBlue" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/montserratbold"
                    android:text="Filosofi Kotlin"
                    android:textColor="@color/DarkBlue"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/pknbtn2"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="80dp"
                    android:background="@drawable/arrow"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/expandblelayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/kotlinandro1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:justificationMode="inter_word"
                    android:padding="5dp"
                    android:text="@string/filosofikt"
                    android:textColor="@color/DarkBlue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/jbkata"
                    android:textColor="@color/DarkBlue"
                    android:background="@drawable/background"
                    android:fontFamily="@font/montserratmedium"
                    android:padding="5dp"
                    android:justificationMode="inter_word"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/fkt1"
                    android:textColor="@color/DarkBlue"
                    android:layout_marginTop="5dp"
                    android:justificationMode="inter_word" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/fkt2"
                    android:textColor="@color/DarkBlue"
                    android:layout_marginTop="5dp"
                    android:justificationMode="inter_word" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rectanglebtn"
                    android:fontFamily="@font/montserratsemibold"
                    android:text="artikel"
                    android:textSize="15sp"
                    android:layout_marginLeft="250dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:onClick="moveartikel"/>


            </LinearLayout>


        </androidx.cardview.widget.CardView>



    </LinearLayout>

    </ScrollView>

</LinearLayout>